# stock-signal-lab

./: .gitignore  AGENTS.md  README.md  app.py  default_decision_mode.yaml  pyproject.toml  requirements.txt
config/: default_decision_mode.yaml
data/: user_portfolio.example.yaml  user_portfolio.yaml
docs/: Codex Working Rules.md  codex_ml_iteration_protocol.md  decision_mode.md  earnings_events_input_guide.md
notebooks/: exploratory.ipynb
src/: __init__.py
tests/: test_ai_layer_rotation.py  test_backtest.py  test_broad_pullback_playbook.py  test_data_fetch.py  test_decision_mode.py  test_decision_report.py  test_drawdown_risk_calibration_quality.py  test_earnings_pead_diagnostics.py  test_experiment_logger.py  test_feature_importance_stability.py  test_features.py  test_labels.py  test_ml_baseline_comparison.py  test_ml_diagnostic_interpretations.py  test_ml_diagnostics.py  test_ml_feature_audit.py  test_ml_feature_selection.py  test_ml_feature_signal.py  test_ml_label_audit.py  test_ml_models.py  test_ml_no_leakage.py  test_ml_regime_segmented_diagnostics.py  test_ml_reliability_by_regime.py  test_ml_reliability_gate.py  test_ml_scoring.py  test_ml_signals.py  test_ml_target_diagnostics.py  test_momentum_quality_diagnostics.py  test_no_lookahead.py  test_portfolio_allocation.py  test_portfolio_crowding_diagnostics.py  test_portfolio_risk.py  test_portfolio_simulator.py  test_research_backtest.py  test_research_export.py  test_research_iteration.py  test_research_lab_opportunity_baseline.py  test_research_lab_risk_incremental_value.py  test_research_runner.py  (+7 more)
(+108 files in other folders)
