[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-signal-lab"
version = "0.1.0"
description = "Local-first Streamlit research app for stock time-series signal-processing features and no-lookahead backtests."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.20",
  "pywavelets>=1.5",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "streamlit>=1.32",
  "yfinance>=0.2.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
